feat(security): rifattorizzazione autenticazione e sicurezza (release v1.0)